syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.learn.service3";
option java_outer_classname = "Service3Impl";

service Service3 {
	// Calculate BMI (Body Mass Index).
    rpc calculateBMI(BMIRequest) returns (BMIResponse) {}
    
	// Get a weight loss weekly target.
    rpc getWeightLossWeeklyTarget(WeightLossWeeklyTargetRequest) returns (WeightLossWeeklyTargetResponse) {}
}

message BMIRequest {
    // Height in centimetre.
    double height = 1;
    
    // Weight in kilogram.
    double weight = 2;
}

message BMIResponse {
    // Body Mass Index.
    double bmi = 1;
    
    // Category based on the bmi results.
    string category = 2;
}

message WeightLossWeeklyTargetRequest {
    // Current weight in kilogram.
    double currentWeight = 1;
    
    // Weight goal in kilogram.
    double weightGoal = 2;
    
    // Number of weeks for the plan.
    int32 numberOfWeeks = 3;
}

message WeightLossWeeklyTargetResponse {    
	// Weight loss weekly target in kilogram.
    double weightLossWeeklyTarget = 1;
}